QGDS 520 Fix to alert spacing

--- a/src/components/bs5/globalAlert/globalAlert.scss
+++ b/src/components/bs5/globalAlert/globalAlert.scss
@@ -5,6 +5,9 @@
   border-radius: 0;
   border-top-style: solid;
   border-width: 0;
+  padding-block: 0.75rem;
+  padding-inline-start: 2rem;
+  padding-inline-end: 1rem;
 
   &:first-child:not(:only-child) {
     border-top-width: 1px;
@@ -12,13 +15,6 @@
 
   & + & {
     border-top-width: 1px;
-  }
-
-  &.alert {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-left: 2rem;
-    margin-bottom: 0;
   }
 
   .qld-global-alert-main {
